# pigment

./: .bumpversion.cfg  .readthedocs.yml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
docs/: conf.py  exceptions.rst  index.rst  reference.rst  requirements.txt
pigment/: __init__.py  exceptions.py  vars.py
tests/: test_blend.py  test_convert_in.py  test_convert_out.py  test_css_names.py  test_eq.py  test_normalize_hex.py  test_random.py  test_repr.py  test_updating.py
