### BUILD CONFIG ###

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Ben Soyka", email = "bensoyka@icloud.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["averager==2.0.1"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "pigment"
readme = "README.md"
requires-python = "~=3.6"

[project.urls]
Changelog = "https://github.com/bsoyka/pigment/releases"
Documentation = "https://pigment.readthedocs.io"
Source = "https://github.com/bsoyka/pigment"

### TOOLS ###

[tool.black]
line-length = 79

[tool.coverage.run]
source = ["pigment"]

[tool.coverage.report]
omit = ["tests/*"]

[tool.isort]
line_length = 79
profile = "black"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
coverage = "coverage run -m pytest"
format = ["_black", "_isort"]
install = "flit install"
test = "tox"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py39,py310
isolated_build = True

[testenv]
deps = pytest
commands = pytest
"""
